// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary four - small 1`] = `
Array [
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <View>
      <Text>
        secondary-3
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-4
      </Text>
    </View>
  </View>,
]
`;

exports[`2. secondary four - medium 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <Text>
      secondary-3
    </Text>
    <View />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`3. secondary four - medium - with isconsecutive 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <Text>
      secondary-3
    </Text>
    <View />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`4. secondary four - wide 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <Text>
      secondary-3
    </Text>
    <View />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`5. secondary four - wide - with isconsecutive 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <Text>
      secondary-3
    </Text>
    <View />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;
